--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -1,7 +1,12 @@
 @import "library/colors";
+@import "library/dimensions";
+@import "thirdparty/ionicons/ionicons.scss";
 @import "library/fonts";
 @import "bourbon/bourbon";
 @import "library/reset";
 @import "library/chrome";
 @import "library/nav";
-@import "library/forms"
+@import "library/receipt_list";
+@import "library/receipt_details";
+@import "library/header";
+@import "library/forms";
