--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -8,5 +8,7 @@
 @import "library/nav";
 @import "library/receipt_list";
 @import "library/receipt_details";
+@import "library/overlay";
+@import "library/lists";
 @import "library/header";
 @import "library/forms";
